@@ -30,12 +30,12 @@ extern "C" {
   errno_t __cdecl _cgetws_s (wchar_t *_Buffer,size_t _SizeInWords,size_t *_SizeRead);
   __DEFINE_CPP_OVERLOAD_SECURE_FUNC_0_1(errno_t, _cgetws_s, wchar_t, _Buffer, size_t*, _SizeRead)
 
-  _CRTIMP int __cdecl _cwprintf_s(const wchar_t *_Format,...);
+  int __cdecl _cwprintf_s (const wchar_t *_Format,...);
   _CRTIMP int __cdecl _cwscanf_s(const wchar_t *_Format,...);
   _CRTIMP int __cdecl _cwscanf_s_l(const wchar_t *_Format,_locale_t _Locale,...);
-  _CRTIMP int __cdecl _vcwprintf_s(const wchar_t *_Format,va_list _ArgList);
-  _CRTIMP int __cdecl _cwprintf_s_l(const wchar_t *_Format,_locale_t _Locale,...);
-  _CRTIMP int __cdecl _vcwprintf_s_l(const wchar_t *_Format,_locale_t _Locale,va_list _ArgList);
+  int __cdecl _vcwprintf_s (const wchar_t *_Format,va_list _ArgList);
+  int __cdecl _cwprintf_s_l (const wchar_t *_Format,_locale_t _Locale,...);
+  int __cdecl _vcwprintf_s_l (const wchar_t *_Format,_locale_t _Locale,va_list _ArgList);
 #endif
 
 #ifdef __cplusplus
