@@ -23,12 +23,12 @@ extern "C" {
 #ifndef _WCONIO_S_DEFINED
 #define _WCONIO_S_DEFINED
   errno_t __cdecl _cgetws_s (wchar_t *_Buffer,size_t _SizeInWords,size_t *_SizeRead);
-  _CRTIMP int __cdecl _cwprintf_s(const wchar_t *_Format,...);
+  int __cdecl _cwprintf_s (const wchar_t *_Format,...);
   _CRTIMP int __cdecl _cwscanf_s(const wchar_t *_Format,...);
   _CRTIMP int __cdecl _cwscanf_s_l(const wchar_t *_Format,_locale_t _Locale,...);
-  _CRTIMP int __cdecl _vcwprintf_s(const wchar_t *_Format,va_list _ArgList);
-  _CRTIMP int __cdecl _cwprintf_s_l(const wchar_t *_Format,_locale_t _Locale,...);
-  _CRTIMP int __cdecl _vcwprintf_s_l(const wchar_t *_Format,_locale_t _Locale,va_list _ArgList);
+  int __cdecl _vcwprintf_s (const wchar_t *_Format,va_list _ArgList);
+  int __cdecl _cwprintf_s_l (const wchar_t *_Format,_locale_t _Locale,...);
+  int __cdecl _vcwprintf_s_l (const wchar_t *_Format,_locale_t _Locale,va_list _ArgList);
 #endif
 
 #ifndef _WSTDIO_S_DEFINED
